Fix: Perform final grammar and spelling checks for form.html.

--- a/form.html
+++ b/form.html
@@ -43,9 +43,9 @@
         <!-- Course Registration Form instructions. -->
         <section class="flex-column-centred">
             <h2>Register for a Beekeeping Course</h2>
-            <p>Enter your details below to register interest for an upcoming beekeeping course. You will receive an
+            <p>Enter your details below to register interest in an upcoming beekeeping course. You will receive an
                 acknowledgement email when your registration is processed.
-                Payment will be taken over the phone on the same or next working day.</p>
+                Payment will be taken over the phone on the same or the next working day.</p>
             <!-- Form redirects the user to the Thank You page when submitted correctly. -->
             <form action="thank-you.html">
                 <fieldset class="details-boxes">
@@ -70,11 +70,11 @@
                         <input type="date" name="age" id="age" max="2005-12-07" required>
                     </div>
                 </fieldset>
-                <!-- Radio Buttons used for course choice as only only course can be completed at a given time. -->
+                <!-- Radio Buttons are used for course choice as only one course can be completed at a given time. -->
                 <fieldset class="details-boxes courses-radio" id="course-details">
                     <legend>Beginner Courses</legend>
                     <div>
-                        <!-- Next available beginner course already checked to aid the first-time user. -->
+                        <!-- Next available beginner course is already checked to aid the first-time user. -->
                         <input type='radio' name="course-level" id="beginner240120" value="beginner240120" checked>
                         <label for="beginner240120">Saturday 20th Jan 2024</label>
                     </div>
