Fix: Perform final grammar and spelling checks for thank-you.html.

--- a/thank-you.html
+++ b/thank-you.html
@@ -45,7 +45,7 @@
     <main>
         <!-- This page informs the user their details have been registered and that they will soon be redirected back to the homepage. -->
         <h2>Thank You!</h2>
-        <p>Your details have been registered and you should receive an email acknowledgement with intructions for
+        <p>Your details have been registered and you should receive an email acknowledgement with instructions for
             payment in the next hour. If you do not receive this email please get in touch with us.</p>
         <h3>You will be redirected to the homepage in 10 seconds.</h3>
         <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to the homepage.</p>
@@ -56,7 +56,7 @@
         <ul>
             <li>
                 <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                    aria-label="Call us (opens your phone app or program and auto-fills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
