Fix: Perform final grammar and spelling checks for 404.html.

--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 
     <!-- Main Content-->
     <main>
-        <!-- A clear and concise 404 page with a single intruction to the user on how to get back to the main website. -->
+        <!-- A clear and concise 404 page with a single instruction to the user on how to get back to the main website. -->
         <div class="flex-column-centred">
             <h2>Oops!</h2>
             <h3>It seems you may have gotten lost. Please use the links at the top of this page to navigate back to the
@@ -58,7 +58,7 @@
         <ul>
             <li>
                 <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                    aria-label="Call us (opens your phone app or program and auto-fills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
