Fix: Perform final grammar and spelling checks for shop.html.

--- a/shop.html
+++ b/shop.html
@@ -47,8 +47,7 @@
             <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order
                 for collection or delivery.
                 Use your beginner course certificate number for a once-off 10% discount on purchases from our shop.
-                Please note we only offer delivery
-                to the Republic of Ireland and to Northern Ireland.</p>
+                Please note we only offer delivery to the Republic of Ireland and to Northern Ireland.</p>
             <p>Contact number: <a href="tel:021-12345678" aria-label="021 12345678">021 12345678</a></p>
             <p>Email: <a href="mailto:info@corkbeekeeping.ie"
                     aria-label="info@corkbeekeeping.ie">info@corkbeekeeping.ie</a>
